# interview-voice-diarizer

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml
openspec/: config.yaml
openspec/changes/add-history-reanalysis/: design.md  proposal.md  tasks.md
openspec/changes/add-history-reanalysis/specs/history-reanalysis/: spec.md
openspec/changes/build-cli-debrief/: design.md  proposal.md  tasks.md
openspec/changes/build-cli-debrief/specs/debrief/: spec.md
openspec/changes/fix-speaker-diarization/: design.md  proposal.md  tasks.md
openspec/changes/fix-speaker-diarization/specs/speaker-diarization-reliability/: spec.md
src/: cli.py  config.py  models.py
src/interview_voice_diarizer/: __init__.py  analysis.py  audio.py  cli.py  config.py  errors.py  models.py  transcript.py
src/interview_voice_diarizer/output/: report.py
src/interview_voice_diarizer/pipeline/: analysis.py  transcript.py
src/interview_voice_diarizer/providers/: volcengine.py
src/output/: report.py
src/pipeline/: analysis.py  audio.py  debrief.py  transcript.py
src/providers/: volcengine.py
tests/: test_analysis.py  test_audio.py  test_cli.py  test_debrief_pipeline.py  test_report.py  test_transcript.py  test_volcengine.py
